--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "antd": "^3.8.1",
     "axios": "^0.18.0",
+    "blueimp-md5": "^2.10.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "echarts": "^4.1.0",
@@ -16,6 +17,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "log4js": "^3.0.5",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.5",
     "morgan": "^1.9.0",
